--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ $(document).ready(function(){
         <li>Director of Internal Affairs, <a href="cssu.ca">Computer Science Student Union (CSSU) </a></li> 
         <em>Elected by the Computer Science students at the University of Toronto</em>
         <br><br>
-        <li>Member of the <a href=/images/about/learnai.pdf>LearnAI 2020</a> Cohort</li>
+        <li>Member of the <a href=/images/about/learnai.pdf>LearnAI 2020</a> Cohort</li>. 
         <em></em>
         <br>
         <li>Member of the <a href=https://www.technologyleadershipinitiative.com/>Technology Leadership Initiative</a> 2020 Cohort</li>
