--- a/index.html
+++ b/index.html
@@ -226,6 +226,40 @@ $(document).ready(function(){
 </tr>
 
 <tr>
+  <td valign="middle" width=25%">
+      <img src="/images/projects/tickertrakr/tickertrakr.png">
+  </td>
+  <td valign="top" width="75%">
+  
+    <h3>TickerTrakr</h3>
+    <small><em>Python, Flask, HTML, CSS, JavaScript</em></small>
+    <br><br>
+    <h4> Winner for Best Data Visualization at Hacklytics - Georgia Tech's Data Science Hackathon </h4>
+    <br>
+    <p>
+      Recently, there has been a major event in market history: the inflation of GME, AMC and other stock prices 
+      mainly due to investors creating buzz on social platforms, such as Reddit and Twitter. The power of social media 
+      on the stock market inspired us to make this project.
+        <br><br>
+        This app aims to help both individuals and companies make informed investing decisions by allowing users to 
+        monitor daily fluctuations in the mentions of their stocks. TickerTrakr allows a user to enter the stocks they own 
+        or want to enquire about, and see the volume of engagement surrounding this ticker on social media. 
+        Ater searching for the stock ticker, 
+        a data panel on the stock of interest is shown with graphs and statistics clearly displayed for easy access. 
+        Data is updated real-time.
+        <br><br>
+        For this project, we used Python for the backend with Flask and HTML, CSS and Javascript for the frontend. 
+        We also used the Twitter Search API, Reddit API and the Finnhub API to get the real-time data we needed. This project
+        was made in only 36 hours!
+    </p>
+    <p>
+        <a href="https://github.com/ushinghal19/when2interview">code</a>
+    </p>
+  </td>
+  </tr>
+
+
+<tr>
 <td valign="middle" width="25%">
     <img src="/images/projects/interview/interview.jpg">
 </td>
